--- a/styleProjetos.css
+++ b/styleProjetos.css
@@ -91,3 +91,10 @@ body {
 #topoTabela{
     background-color: royalblue;
 }
+.direitos{
+    display: flex;
+    justify-content: center;
+    color: #F5F5DC;
+    text-align: center;
+    padding-top: 10%;
+}
